# llm-zoomcamp

./: .gitignore  README.md
01-agentic-tag/: README.md
01-agentic-tag/code/: agents.ipynb  faq.db  persinsent_rag.ipynb  pyproject.toml  rag.ipynb  rag_helper.py  sqlite-ingest.ipynb
01-agentic-tag/homework/: README.md  homework.ipynb  pyproject.toml  rag_helper.py
02-vector-search/: README.md  pyproject.toml
02-vector-search-onnx/: pyproject.toml
02-vector-search-onnx/code/: 01-vector_search_onnx.ipynb
02-vector-search-onnx/homework/: README.md  homework.ipynb
02-vector-search/code/: 01-vector_search.ipynb  02-vector_search_persistent.ipynb  03-vector_search_persistent2.ipynb  04-vector_search_pgvector.ipynb
03-orchestration/: docker-compose.yml
03-orchestration/flows/: 1_chat_without_rag.yaml  2_chat_with_rag.yaml  3_rag_with_websearch.yaml  4_simple_agent.yaml  5_web_research_agent.yaml  6_multi_agent_research.yaml
03-orchestration/homework/: README.md
04-evaluation/code/: 01-data-gen.ipynb  02-search-eval.ipynb  03-rag-evals.ipynb  04-llm-judge.ipynb  05-agent-eval.ipynb  pyproject.toml
04-evaluation/code/homework/: README.md  homework.ipynb
05-monitoring/code/: app.py  assistant.py  db_init.py  docker-compose.yaml  pyproject.toml
05-monitoring/homework/: README.md  main.py  pyproject.toml  queries.ipynb  traces.db
06-dlt-workshop/: README.md
06-dlt-workshop/code/: __deployment__.py  agent_logs_dashboard.py  claude_logs_dashboard.py  filesystem_pipeline.py  pyproject.toml  rest_api_pipeline.py
06-dlt-workshop/homework/: README.md  (+3 more)
(+1 files in other folders)
