[project]
name = "02-vector-search-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "minsearch>=0.1.1",
    "numpy<2",
    "onnxruntime<1.19",
    "tokenizers>=0.23.1",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.21.0",
    "jupyter>=1.1.1",
]
