[project]
name = "llm-zoomcamp-2026-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "onnxruntime>=1.23,<1.24",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.28.1",
    "tokenizers>=0.23.1",
    "toyaikit>=0.0.11",
    "tqdm>=4.67.3",
]
